apps/artifactory/artifactory/sbox-intsvc-ingress.yaml
---
#
# Ingress
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artifactory-oss
  namespace: artifactory
spec:
  rules:
    - host: artifactory.sandbox.platform.hmcts.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: artifactory-oss
              port:
                number: 80
